--- a/index.html
+++ b/index.html
@@ -11,8 +11,58 @@
 
 <body>
 
-    <script>
 
+    <script>
+        const playerSelection = 'rock';
+        const computerSelection = computerPlay();
+        console.log(playRound(playerSelection, computerSelection));
+
+
+        function playRound(playerSelection, computerSelection) {
+            if (computerPlay == 'rock') {
+                if (playerSelection == 'rock') {
+                    tie();
+                } else if (playerSelection == 'paper') {
+                    playerWon();
+                } else if (playerSelection == 'scissors') {
+                    computerWon();
+                }
+            } else if (computerPlay == 'paper') {
+                if (playerSelection == 'rock') {
+                    computerWon();
+                } else if (playerSelection == 'paper') {
+                    tie();
+                } else if (playerSelection == 'scissors') {
+                    playerWon();
+                }
+            } else if (computerPlay == 'scissors') {
+                if (playerSelection == 'rock') {
+                    playerWon();
+                } else if (playerSelection == 'paper') {
+                    computerWon();
+                } else if (playerSelection == 'scissors') {
+                    tie();
+                }
+            }
+        }
+
+        function computerWon() {
+            return "The A.I has won";
+        }
+
+        function tie() {
+            return "It's a tie";
+        }
+
+        function playerWon() {
+            return "The player has won";
+        }
+
+        function computerPlay() {
+            let textArray = ['rock', 'paper', 'scissors']; //array with possible computer results
+            let randomNumber = Math.floor(Math.random() * textArray.length); //generates random array value
+            return textArray[randomNumber]; //returns the computer's value
+        }
     </script>
 
 </body>
